--- a/samples/PluginDemo/res/values-zh-rTW/strings.xml
+++ b/samples/PluginDemo/res/values-zh-rTW/strings.xml
@@ -15,10 +15,10 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="menu_add_contact">"新增連絡人"</string>
-    <string name="menu_remove_contact">"刪除連絡人"</string>
+    <string name="menu_add_contact">"新增聯絡人"</string>
+    <string name="menu_remove_contact">"刪除聯絡人"</string>
     <string name="menu_block_contact">"封鎖"</string>
-    <string name="menu_contact_list">"連絡人清單"</string>
+    <string name="menu_contact_list">"聯絡人清單"</string>
     <string name="menu_start_chat">"傳送即時訊息"</string>
     <string name="menu_view_profile">"好友資訊"</string>
     <string name="menu_end_conversation">"結束對談"</string>
@@ -26,13 +26,13 @@
     <string name="menu_insert_smiley">"插入表情符號"</string>
     <string name="sign_up">"取得新帳戶"</string>
     <string name="check_save_password">"為了安全起見，如果電話遺失或遭竊，請使用電腦前往該網站並變更密碼。"</string>
-    <string name="buddy_list_title">"連絡人清單 - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
+    <string name="buddy_list_title">"聯絡人清單 - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
     <string name="label_username">"使用者名稱："</string>
     <string name="ongoing_conversation">"對談 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
-    <string name="contact_profile_title">"連絡人資訊"</string>
+    <string name="contact_profile_title">"聯絡人資訊"</string>
     <string name="presence_available">"可用"</string>
-    <string name="add_contact_title">"新增連絡人"</string>
-    <string name="input_contact_label">"要新增之連絡人在畫面上的名稱："</string>
+    <string name="add_contact_title">"新增聯絡人"</string>
+    <string name="input_contact_label">"要新增之聯絡人在畫面上的名稱："</string>
     <string name="invite_label">"新增好友"</string>
   <string-array name="smiley_names">
     <item>"開心"</item>
