--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -23,13 +23,13 @@
     <string name="menu_view_blocked">"封鎖"</string>
     <string name="menu_view_accounts">"帳戶清單"</string>
     <string name="menu_settings">"設定"</string>
-    <string name="menu_start_chat">"開始交談"</string>
+    <string name="menu_start_chat">"開始即時通訊"</string>
     <string name="menu_sign_out">"登出"</string>
     <string name="menu_view_profile">"觀看個人檔案"</string>
-    <string name="menu_end_conversation">"結束交談"</string>
+    <string name="menu_end_conversation">"結束即時通訊"</string>
     <string name="menu_view_contact_list">"聯絡人清單"</string>
     <string name="menu_invite_contact">"邀請…"</string>
-    <string name="menu_switch_chats">"切換交談"</string>
+    <string name="menu_switch_chats">"切換即時通訊"</string>
     <string name="menu_insert_smiley">"插入表情符號"</string>
     <string name="menu_plus">"[選單] +"</string>
     <string name="default_input_title">"輸入"</string>
@@ -57,7 +57,7 @@
     <string name="bg_data_prompt_message">"<xliff:g id="PROVIDER">%1$s</xliff:g> 需要啟用背景資料。"</string>
     <string name="bg_data_prompt_ok">"啟用"</string>
     <string name="bg_data_prompt_cancel">"結束"</string>
-    <string name="ongoing_conversation">"進行中的交談 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
+    <string name="ongoing_conversation">"進行中的即時通訊 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"線上人數 <xliff:g id="NUMBER">%1$d</xliff:g>"</string>
     <string name="subscriptions">"邀請朋友"</string>
     <string name="unknown_contact">"("<i>" 未知的 "</i>")"</string>
@@ -65,37 +65,37 @@
     <string name="empty_conversation_group">"沒有對話"</string>
     <string name="contacts_picker_title">"選取要邀請的聯絡人"</string>
     <string name="contact_filter_hint">"輸入關鍵字尋找聯絡人"</string>
-    <string name="empty_contact_list">"找不到聯絡人"</string>
+    <string name="empty_contact_list">"找不到聯絡人。"</string>
     <string name="blocked_list_title">"已封鎖聯絡人 - <xliff:g id="USER">%1$s</xliff:g>"</string>
-    <string name="no_blocked_contact">"沒有封鎖的聯絡人"</string>
+    <string name="no_blocked_contact">"沒有封鎖的聯絡人。"</string>
     <string name="contact_profile_title">"聯絡人檔案"</string>
     <string name="label_status">"狀態："</string>
-    <string name="label_client_type">"客戶端類型："</string>
+    <string name="label_client_type">"用戶端類型："</string>
     <string name="client_type_computer">"電腦"</string>
-    <string name="client_type_mobile">"行動"</string>
+    <string name="client_type_mobile">"行動裝置"</string>
     <string name="presence_available">"線上"</string>
     <string name="presence_busy">"忙碌"</string>
     <string name="presence_away">"外出"</string>
     <string name="presence_idle">"閒置"</string>
     <string name="presence_offline">"離線"</string>
     <string name="presence_invisible">"顯示離線"</string>
-    <string name="chat_with">"與 <xliff:g id="USER">%1$s</xliff:g> 交談"</string>
+    <string name="chat_with">"與<xliff:g id="USER">%1$s</xliff:g>進行即時通訊"</string>
     <string name="me">"我"</string>
-    <string name="compose_hint">"輸入文字開始撰寫"</string>
+    <string name="compose_hint">"請在此輸入文字"</string>
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> 在線上"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> 顯示離開"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> 目前忙碌"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> 顯示離線"</string>
-    <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> 加入交談"</string>
+    <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> 已加入"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> 已離開"</string>
     <string name="time_stamp" format="date">"'傳送時間：'<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g>' '<xliff:g id="AMPM">a</xliff:g>'，'<xliff:g id="DATE">EEEE</xliff:g>"</string>
     <string name="send">"傳送"</string>
     <string name="msg_sent_failed">"訊息無法傳送。"</string>
     <string name="disconnected_warning">"與伺服器連線中斷。您的訊息將在下次登入時傳送。"</string>
     <string name="contact_offline_warning">"<xliff:g id="USER_0">%1$s</xliff:g> 顯示離線。您的訊息將在 <xliff:g id="USER_1">%1$s</xliff:g> 登入時傳送。"</string>
-    <string name="contact_not_in_list_warning">"<xliff:g id="USER">%1$s</xliff:g> 不在您的聯絡人清單。"</string>
+    <string name="contact_not_in_list_warning">"<xliff:g id="USER">%1$s</xliff:g>不在您的聯絡人清單。"</string>
     <string name="select_link_title">"選取連結"</string>
-    <string name="empty_chat_list">"沒有交談"</string>
+    <string name="empty_chat_list">"沒有進行中的即時通訊"</string>
     <string name="add_contact_title">"新增聯絡人"</string>
     <string name="input_contact_label">"您要邀請的對象電子郵件地址："</string>
     <string name="choose_list_label">"選擇一個清單："</string>
@@ -106,25 +106,25 @@
     <string name="notification_group_title">"通知設定"</string>
     <string name="notification_enabled_title">"即時訊息通知"</string>
     <string name="notification_enabled_summary">"收到即時訊息時，在狀態列中顯示通知"</string>
-    <string name="notification_vibrate_title">"振動"</string>
-    <string name="notification_vibrate_summary">"收到即時訊息時同時開啟振動提醒"</string>
+    <string name="notification_vibrate_title">"震動"</string>
+    <string name="notification_vibrate_summary">"收到即時訊息時振動提醒"</string>
     <string name="notification_sound_title">"音效"</string>
-    <string name="notification_sound_summary">"收到訊息時播放鈴聲"</string>
+    <string name="notification_sound_summary">"收到即時訊息時播放鈴聲"</string>
     <string name="notification_ringtone_title">"選取鈴聲"</string>
-    <string name="invitation_prompt">"<xliff:g id="USER">%1$s</xliff:g> 邀請您加入群組交談。"</string>
+    <string name="invitation_prompt">"<xliff:g id="USER">%1$s</xliff:g>邀請您加入群組即時通訊。"</string>
     <string name="invitation_sent_prompt">"已傳送邀請給 <xliff:g id="USER">%1$s</xliff:g>。"</string>
     <string name="accept_invitation">"接受"</string>
     <string name="decline_invitation">"拒絕"</string>
-    <string name="subscription_prompt">"<xliff:g id="USER">%1$s</xliff:g> 想要將您新增到聯絡人清單。"</string>
+    <string name="subscription_prompt">"<xliff:g id="USER">%1$s</xliff:g>想要將您新增到聯絡人清單。"</string>
     <string name="approve_subscription">"接受"</string>
     <string name="decline_subscription">"拒絕"</string>
     <string name="approve_subscription_error">"訂閱 <xliff:g id="USER">%1$s</xliff:g> 資訊失敗。請稍後再試一次。"</string>
     <string name="decline_subscription_error">"拒絕訂閱 <xliff:g id="USER">%1$s</xliff:g> 資訊失敗。請稍後再試一次。"</string>
     <string name="newMessages_label">"來自 <xliff:g id="PROVIDER">%1$s</xliff:g> 的新訊息"</string>
-    <string name="num_unread_chats">"<xliff:g id="NUMBER">%1$d</xliff:g> 個未讀交談"</string>
-    <string name="subscription_notify_text">"<xliff:g id="USER">%s</xliff:g> 邀請您"</string>
-    <string name="notify_groupchat_label">"群組交談邀請"</string>
-    <string name="group_chat_invite_notify_text">"來自 <xliff:g id="USER">%s</xliff:g> 的群組交談邀請"</string>
+    <string name="num_unread_chats">"<xliff:g id="NUMBER">%1$d</xliff:g> 個未讀即時訊息"</string>
+    <string name="subscription_notify_text">"<xliff:g id="USER">%s</xliff:g>傳送朋友邀請給您"</string>
+    <string name="notify_groupchat_label">"群組即時通訊邀請"</string>
+    <string name="group_chat_invite_notify_text">"來自<xliff:g id="USER">%s</xliff:g>的群組即時通訊邀請"</string>
     <string name="add_contact_success">"「<xliff:g id="USER">%1$s</xliff:g>」已新增。"</string>
     <string name="delete_contact_success">"「<xliff:g id="USER">%1$s</xliff:g>」已刪除。"</string>
     <string name="block_contact_success">"「<xliff:g id="USER">%1$s</xliff:g>」已封鎖。"</string>
@@ -139,9 +139,9 @@
     <string name="select_contact">"請先選取聯絡人。"</string>
     <string name="disconnected">"已中斷連線！"\n</string>
     <string name="service_error">"服務錯誤！"</string>
-    <string name="load_contact_list_failed">"未載入聯絡人清單。"</string>
+    <string name="load_contact_list_failed">"聯絡人清單未載入。"</string>
     <string name="cant_connect_to_server">"無法連線到伺服器。請檢查連線狀態。"</string>
-    <string name="contact_already_exist">"<xliff:g id="USER">%1$s</xliff:g> 已在您的聯絡人清單。"</string>
+    <string name="contact_already_exist">"<xliff:g id="USER">%1$s</xliff:g>已在您的聯絡人清單。"</string>
     <string name="contact_blocked">"「<xliff:g id="USER">%1$s</xliff:g>」已封鎖。"</string>
     <string name="contact_not_loaded">"請等待聯絡人清單載入完成。"</string>
     <string name="network_error">"網路發生問題。"</string>
@@ -157,9 +157,9 @@
     <string name="unknown_user">"您輸入的使用者名稱無法辨識。"</string>
     <string name="recipient_blocked_the_user">"很抱歉，您被此使用者封鎖。"</string>
     <string name="session_expired">"登入時限已到，請重新登入。"</string>
-    <string name="forced_logout">"您已在其他程式登入。"</string>
-    <string name="already_logged_in">"您已在另一台機器上登入。"</string>
-    <string name="msisdn_error">"很抱歉，無法從 SIM 卡讀取電話號碼。請向您的服務業者尋求協助。"</string>
+    <string name="forced_logout">"您已在其他用戶端登入。"</string>
+    <string name="already_logged_in">"您已在其他用戶端登入。"</string>
+    <string name="msisdn_error">"很抱歉，無法從 SIM 卡讀取電話號碼。請向您的電信業者尋求協助。"</string>
     <string name="not_signed_in">"您尚未登入。"</string>
     <string name="general_error">"錯誤代碼 <xliff:g id="CODE">%1$d</xliff:g>"</string>
   <string-array name="default_smiley_names">
