--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -15,18 +15,18 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="im_label">"IM"</string>
+    <string name="im_label">"메신저"</string>
     <string name="menu_cancel_signin">"로그인 취소"</string>
     <string name="menu_add_contact">"연락처 추가"</string>
     <string name="menu_remove_contact">"연락처 삭제"</string>
     <string name="menu_block_contact">"연락처 차단"</string>
-    <string name="menu_view_blocked">"차단됨"</string>
+    <string name="menu_view_blocked">"차단 목록"</string>
     <string name="menu_view_accounts">"계정 목록"</string>
     <string name="menu_settings">"설정"</string>
     <string name="menu_start_chat">"채팅 시작"</string>
     <string name="menu_sign_out">"로그아웃"</string>
     <string name="menu_view_profile">"프로필 보기"</string>
-    <string name="menu_end_conversation">"채팅 끝내기"</string>
+    <string name="menu_end_conversation">"채팅 종료"</string>
     <string name="menu_view_contact_list">"연락처 목록"</string>
     <string name="menu_invite_contact">"초대..."</string>
     <string name="menu_switch_chats">"채팅 전환"</string>
@@ -49,25 +49,25 @@
     <string name="remember_password">"내 비밀번호 저장"</string>
     <string name="keep_me_signed_in">"자동으로 로그인"</string>
     <string name="sign_up">"계정이 없으세요?"</string>
-    <string name="check_auto_sign_in">"이 옵션을 선택하면 응용프로그램을 열 때마다 자동으로 로그인됩니다. 옵션을 비활성화하려면 로그아웃한 다음 \'자동으로 로그인\' 확인란을 선택 취소하세요."</string>
+    <string name="check_auto_sign_in">"이 옵션을 선택하면 응용프로그램을 열 때마다 자동으로 로그인됩니다. 옵션을 사용 중지하려면 로그아웃한 다음 \'자동으로 로그인\' 확인란을 선택 취소하세요."</string>
     <string name="sign_in">"로그인"</string>
     <string name="signing_in_to">"<xliff:g id="ACCOUNT">%1$s</xliff:g>에 로그인하는 중"</string>
     <string name="signing_in_wait">"로그인하는 중..."</string>
-    <string name="bg_data_prompt_title">"백그라운드 데이터 사용 안 함"</string>
+    <string name="bg_data_prompt_title">"백그라운드 데이터 사용 안함"</string>
     <string name="bg_data_prompt_message">"<xliff:g id="PROVIDER">%1$s</xliff:g>을(를) 사용하려면 백그라운드 데이터를 사용하도록 설정해야 합니다."</string>
     <string name="bg_data_prompt_ok">"사용"</string>
     <string name="bg_data_prompt_cancel">"종료"</string>
-    <string name="ongoing_conversation">"진행 중인 채팅(<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
-    <string name="online_count">"온라인 <xliff:g id="NUMBER">%1$d</xliff:g>명"</string>
+    <string name="ongoing_conversation">"진행 중인 채팅(<xliff:g id="NUMBER">%1$d</xliff:g>개)"</string>
+    <string name="online_count">"온라인 접속자 <xliff:g id="NUMBER">%1$d</xliff:g>명"</string>
     <string name="subscriptions">"친구 초대"</string>
     <string name="unknown_contact">"("<i>"알 수 없음"</i>")"</string>
     <string name="empty_contact_group">"비어 있음"</string>
     <string name="empty_conversation_group">"대화 내용 없음"</string>
     <string name="contacts_picker_title">"초대할 연락처 선택"</string>
     <string name="contact_filter_hint">"입력하여 연락처 찾기"</string>
-    <string name="empty_contact_list">"연락처가 없습니다."</string>
-    <string name="blocked_list_title">"차단된 연락처 - <xliff:g id="USER">%1$s</xliff:g>"</string>
-    <string name="no_blocked_contact">"차단된 연락처가 없습니다."</string>
+    <string name="empty_contact_list">"주소록이 없습니다."</string>
+    <string name="blocked_list_title">"차단된 주소록 - <xliff:g id="USER">%1$s</xliff:g>"</string>
+    <string name="no_blocked_contact">"차단된 주소록이 없습니다."</string>
     <string name="contact_profile_title">"연락처 프로필"</string>
     <string name="label_status">"상태:"</string>
     <string name="label_client_type">"클라이언트 유형:"</string>
@@ -76,51 +76,51 @@
     <string name="presence_available">"온라인"</string>
     <string name="presence_busy">"다른 용무 중"</string>
     <string name="presence_away">"자리 비움"</string>
-    <string name="presence_idle">"한가함"</string>
+    <string name="presence_idle">"자리 비움"</string>
     <string name="presence_offline">"오프라인"</string>
-    <string name="presence_invisible">"오프라인"</string>
+    <string name="presence_invisible">"오프라인으로 표시"</string>
     <string name="chat_with">"<xliff:g id="USER">%1$s</xliff:g>님과 채팅"</string>
     <string name="me">"나"</string>
-    <string name="compose_hint">"메시지 내용을 입력하세요."</string>
+    <string name="compose_hint">"메시지를 입력하세요."</string>
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g>님이 온라인 상태입니다."</string>
-    <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g>님이 자리에 없습니다."</string>
+    <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g>님이 자리비움 상태입니다."</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g>님이 다른 용무 중입니다."</string>
-    <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g>님이 오프라인 상태입니다."</string>
-    <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g>님이 참여하셨습니다."</string>
-    <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g>님이 채팅룸을 나가셨습니다."</string>
+    <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g>님은 오프라인 상태입니다."</string>
+    <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g>님이 채팅에 참여했습니다."</string>
+    <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g>님이 채팅에서 나갔습니다."</string>
     <string name="time_stamp" format="date">"<xliff:g id="DATE">EEEE</xliff:g>', '<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g>' '<xliff:g id="AMPM">a</xliff:g>'에 전송'"</string>
-    <string name="send">"보내기"</string>
+    <string name="send">"전송"</string>
     <string name="msg_sent_failed">"메시지를 보내지 못했습니다."</string>
     <string name="disconnected_warning">"서버와의 연결이 끊어졌습니다. 메시지는 온라인 상태일 때 전송됩니다."</string>
-    <string name="contact_offline_warning">"<xliff:g id="USER_0">%1$s</xliff:g>님이 오프라인 상태입니다. 보내는 메시지는 <xliff:g id="USER_1">%1$s</xliff:g>님이 온라인 상태일 때 배달됩니다."</string>
+    <string name="contact_offline_warning">"<xliff:g id="USER_0">%1$s</xliff:g>님이 오프라인 상태입니다. <xliff:g id="USER_1">%1$s</xliff:g>님이 온라인 상태가 되면 보낸 메시지가 전달됩니다."</string>
     <string name="contact_not_in_list_warning">"<xliff:g id="USER">%1$s</xliff:g>이(가) 연락처 목록에 없습니다."</string>
     <string name="select_link_title">"링크 선택"</string>
     <string name="empty_chat_list">"진행 중인 채팅이 없습니다."</string>
     <string name="add_contact_title">"연락처 추가"</string>
     <string name="input_contact_label">"초대할 사람의 이메일 주소:"</string>
     <string name="choose_list_label">"목록 선택:"</string>
-    <string name="invite_instruction">"연락처에서 추가할 이름을 입력하세요."</string>
+    <string name="invite_instruction">"주소록에서 추가할 이름을 입력하세요."</string>
     <string name="invite_label">"초대장 보내기"</string>
     <string name="setting_title">"일반 설정"</string>
-    <string name="hide_offline_contacts">"오프라인 연락처 숨기기"</string>
+    <string name="hide_offline_contacts">"오프라인 주소록 숨기기"</string>
     <string name="notification_group_title">"알림 설정"</string>
-    <string name="notification_enabled_title">"IM 알림"</string>
-    <string name="notification_enabled_summary">"IM 도착 시 상태 표시줄에 알림"</string>
+    <string name="notification_enabled_title">"메신저 알림"</string>
+    <string name="notification_enabled_summary">"메신저가 오면 상태 표시줄에 알림"</string>
     <string name="notification_vibrate_title">"진동"</string>
-    <string name="notification_vibrate_summary">"IM 도착 시 진동 울림"</string>
-    <string name="notification_sound_title">"소리"</string>
-    <string name="notification_sound_summary">"IM 도착 시 벨소리 재생"</string>
+    <string name="notification_vibrate_summary">"메신저가 오면 진동"</string>
+    <string name="notification_sound_title">"사운드"</string>
+    <string name="notification_sound_summary">"메신저가 오면 벨소리 재생"</string>
     <string name="notification_ringtone_title">"벨소리 선택"</string>
     <string name="invitation_prompt">"<xliff:g id="USER">%1$s</xliff:g>님이 그룹 채팅에 초대하셨습니다."</string>
     <string name="invitation_sent_prompt">"<xliff:g id="USER">%1$s</xliff:g>님에게 초대장을 보냈습니다."</string>
     <string name="accept_invitation">"수락"</string>
-    <string name="decline_invitation">"거절"</string>
+    <string name="decline_invitation">"거부"</string>
     <string name="subscription_prompt">"<xliff:g id="USER">%1$s</xliff:g>님이 연락처 목록에 올리기 위해 초대하셨습니다."</string>
     <string name="approve_subscription">"수락"</string>
-    <string name="decline_subscription">"거절"</string>
-    <string name="approve_subscription_error">"<xliff:g id="USER">%1$s</xliff:g>님의 구독을 승인할 수 없습니다. 나중에 다시 시도해 보세요."</string>
-    <string name="decline_subscription_error">"<xliff:g id="USER">%1$s</xliff:g>님의 구독을 거절할 수 없습니다. 나중에 다시 시도해 보세요."</string>
-    <string name="newMessages_label">"새로운 <xliff:g id="PROVIDER">%1$s</xliff:g> 메시지"</string>
+    <string name="decline_subscription">"거부"</string>
+    <string name="approve_subscription_error">"<xliff:g id="USER">%1$s</xliff:g>님의 구독을 승인할 수 없습니다. 잠시 후에 다시 시도해 주세요."</string>
+    <string name="decline_subscription_error">"<xliff:g id="USER">%1$s</xliff:g>님의 구독을 거부할 수 없습니다. 잠시 후에 다시 시도해 주세요."</string>
+    <string name="newMessages_label">"새 메시지 <xliff:g id="PROVIDER">%1$s</xliff:g>개"</string>
     <string name="num_unread_chats">"읽지 않은 채팅 <xliff:g id="NUMBER">%1$d</xliff:g>개"</string>
     <string name="subscription_notify_text">"<xliff:g id="USER">%s</xliff:g>님이 친구 초대를 보내셨습니다."</string>
     <string name="notify_groupchat_label">"그룹 채팅 초대"</string>
@@ -129,20 +129,20 @@
     <string name="delete_contact_success">"연락처 \'<xliff:g id="USER">%1$s</xliff:g>\'이(가) 삭제되었습니다."</string>
     <string name="block_contact_success">"연락처 \'<xliff:g id="USER">%1$s</xliff:g>\'이(가) 차단되었습니다."</string>
     <string name="unblock_contact_success">"연락처 \'<xliff:g id="USER">%1$s</xliff:g>\'이(가) 차단 해제되었습니다."</string>
-    <string name="perm_label">"IM 서비스 시작"</string>
-    <string name="perm_desc">"응용프로그램이 의도를 통해 IM 서비스를 시작할 수 있도록 합니다."</string>
+    <string name="perm_label">"메신저 서비스 시작"</string>
+    <string name="perm_desc">"응용프로그램이 인텐트를 통해 메신저 서비스를 시작할 수 있도록 합니다."</string>
     <string name="error">"주의"</string>
-    <string name="login_service_failed">"<xliff:g id="SERVICE">%1$s</xliff:g> 서비스에 로그인할 수 없습니다. 나중에 다시 시도해 보세요."\n"(세부정보: <xliff:g id="DESCRIPTION">%2$s</xliff:g>)"</string>
+    <string name="login_service_failed">"<xliff:g id="SERVICE">%1$s</xliff:g> 서비스에 로그인할 수 없습니다. 잠시 후에 다시 시도해 주세요."\n"(세부정보: <xliff:g id="DESCRIPTION">%2$s</xliff:g>)"</string>
     <string name="add_list_failed">"목록이 추가되지 않았습니다."</string>
     <string name="block_contact_failed">"연락처를 차단하지 못했습니다."</string>
     <string name="unblock_contact_failed">"연락처를 차단 해제하지 못했습니다."</string>
     <string name="select_contact">"먼저 연락처를 선택하세요."</string>
-    <string name="disconnected">"연결 끊김!"\n</string>
-    <string name="service_error">"서비스 오류!"</string>
+    <string name="disconnected">"연결 끊김"\n</string>
+    <string name="service_error">"서비스 오류"</string>
     <string name="load_contact_list_failed">"연락처 목록을 로드하지 못했습니다."</string>
     <string name="cant_connect_to_server">"서버에 연결할 수 없습니다. 연결을 확인하세요."</string>
-    <string name="contact_already_exist">"<xliff:g id="USER">%1$s</xliff:g>이(가) 이미 연락처 목록에 있습니다."</string>
-    <string name="contact_blocked">"연락처 \'<xliff:g id="USER">%1$s</xliff:g>\'이(가) 차단되었습니다."</string>
+    <string name="contact_already_exist">"<xliff:g id="USER">%1$s</xliff:g>님이 이미 연락처 목록에 있습니다."</string>
+    <string name="contact_blocked">"연락처 \'<xliff:g id="USER">%1$s</xliff:g>\'은(는) 차단되었습니다."</string>
     <string name="contact_not_loaded">"연락처 목록이 로드되는 동안 잠시 기다려 주세요."</string>
     <string name="network_error">"네트워크 오류가 발생했습니다."</string>
     <string name="service_not_support">"서버에서 이 기능을 지원하지 않습니다."</string>
@@ -163,22 +163,22 @@
     <string name="not_signed_in">"현재 로그인되어 있지 않습니다."</string>
     <string name="general_error">"오류 코드 <xliff:g id="CODE">%1$d</xliff:g>"</string>
   <string-array name="default_smiley_names">
-    <item>"행복"</item>
-    <item>"슬픔"</item>
+    <item>"행복해"</item>
+    <item>"슬퍼요"</item>
     <item>"윙크"</item>
     <item>"메롱"</item>
-    <item>"놀람"</item>
+    <item>"헉!"</item>
     <item>"키스"</item>
-    <item>"소리 지름"</item>
-    <item>"멋짐"</item>
-    <item>"욕심"</item>
-    <item>"부끄러움"</item>
+    <item>"아악"</item>
+    <item>"멋지네"</item>
+    <item>"으이구"</item>
+    <item>"실수했네"</item>
     <item>"당황"</item>
     <item>"천사"</item>
-    <item>"우유부단"</item>
-    <item>"울음"</item>
-    <item>"입막음"</item>
-    <item>"웃음"</item>
+    <item>"결정하기 어렵군"</item>
+    <item>"엉엉엉"</item>
+    <item>"비밀로 할게"</item>
+    <item>"하하하"</item>
     <item>"어리둥절"</item>
   </string-array>
 </resources>
