--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -23,161 +23,161 @@
     <string name="menu_view_blocked">"已阻止"</string>
     <string name="menu_view_accounts">"帐户列表"</string>
     <string name="menu_settings">"设置"</string>
-    <string name="menu_start_chat">"发起聊天"</string>
+    <string name="menu_start_chat">"开始聊天"</string>
     <string name="menu_sign_out">"退出"</string>
     <string name="menu_view_profile">"查看个人资料"</string>
     <string name="menu_end_conversation">"结束聊天"</string>
-    <string name="menu_view_contact_list">"“联系人”列表"</string>
+    <string name="menu_view_contact_list">"联系人列表"</string>
     <string name="menu_invite_contact">"邀请..."</string>
     <string name="menu_switch_chats">"切换聊天"</string>
-    <string name="menu_insert_smiley">"插入表情符号"</string>
-    <string name="menu_plus">"“菜单”+"</string>
+    <string name="menu_insert_smiley">"插入表情符"</string>
+    <string name="menu_plus">"MENU+"</string>
     <string name="default_input_title">"输入"</string>
     <string name="confirm">"确认"</string>
-    <string name="confirm_delete_contact">"联系人“<xliff:g id="USER">%1$s</xliff:g>”会被删除。"</string>
-    <string name="confirm_block_contact">"联系人“<xliff:g id="USER">%1$s</xliff:g>”会被阻止。"</string>
-    <string name="confirm_unblock_contact">"联系人“<xliff:g id="USER">%1$s</xliff:g>”会被取消阻止。"</string>
+    <string name="confirm_delete_contact">"将会删除联系人“<xliff:g id="USER">%1$s</xliff:g>”。"</string>
+    <string name="confirm_block_contact">"将会阻止联系人“<xliff:g id="USER">%1$s</xliff:g>”。"</string>
+    <string name="confirm_unblock_contact">"将会解除阻止联系人“<xliff:g id="USER">%1$s</xliff:g>”。"</string>
     <string name="ok">"确定"</string>
     <string name="cancel">"取消"</string>
     <string name="yes">"确定"</string>
     <string name="no">"取消"</string>
-    <string name="signed_out_prompt">"您已退出<xliff:g id="ACCOUNT">%1$s</xliff:g>。"</string>
-    <string name="signed_out_prompt_with_error">"您已退出<xliff:g id="ACCOUNT">%1$s</xliff:g>，原因是<xliff:g id="REASON">%2$s</xliff:g>。"</string>
-    <string name="add_account">"添加<xliff:g id="ACCOUNT">%1$s</xliff:g>帐户"</string>
+    <string name="signed_out_prompt">"您已经退出了 <xliff:g id="ACCOUNT">%1$s</xliff:g>。"</string>
+    <string name="signed_out_prompt_with_error">"由于<xliff:g id="REASON">%2$s</xliff:g>，您已经退出 <xliff:g id="ACCOUNT">%1$s</xliff:g>。"</string>
+    <string name="add_account">"添加 <xliff:g id="ACCOUNT">%1$s</xliff:g> 帐户"</string>
     <string name="label_username">"用户名："</string>
     <string name="label_password">"密码："</string>
-    <string name="remember_password">"记住我的密码。"</string>
+    <string name="remember_password">"记住密码。"</string>
     <string name="keep_me_signed_in">"自动登录。"</string>
     <string name="sign_up">"没有帐户？"</string>
-    <string name="check_auto_sign_in">"每次您打开该应用程序时，此选项都会自动让您登录。要禁用此选项，请退出，然后取消选中“自动登录”复选框。"</string>
+    <string name="check_auto_sign_in">"启用该选项后，您每次打开此应用程序时都会自动登录。要停用该选项，请退出，然后取消选中“自动登录”复选框。"</string>
     <string name="sign_in">"登录"</string>
-    <string name="signing_in_to">"登录<xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
+    <string name="signing_in_to">"正在登录 <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"正在登录..."</string>
-    <string name="bg_data_prompt_title">"背景数据被禁用"</string>
+    <string name="bg_data_prompt_title">"背景数据已禁用"</string>
     <string name="bg_data_prompt_message">"<xliff:g id="PROVIDER">%1$s</xliff:g> 需要启用背景数据。"</string>
     <string name="bg_data_prompt_ok">"启用"</string>
     <string name="bg_data_prompt_cancel">"退出"</string>
-    <string name="ongoing_conversation">"正在进行的聊天数 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
+    <string name="ongoing_conversation">"当前聊天 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="online_count">"<xliff:g id="NUMBER">%1$d</xliff:g> 人在线"</string>
     <string name="subscriptions">"好友邀请"</string>
     <string name="unknown_contact">"（"<i>"未知"</i>"）"</string>
     <string name="empty_contact_group">"空"</string>
-    <string name="empty_conversation_group">"没有会话"</string>
+    <string name="empty_conversation_group">"无会话"</string>
     <string name="contacts_picker_title">"选择要邀请的联系人"</string>
-    <string name="contact_filter_hint">"键入内容以查找联系人"</string>
+    <string name="contact_filter_hint">"输入拼音以查找联系人"</string>
     <string name="empty_contact_list">"未找到联系人。"</string>
     <string name="blocked_list_title">"已阻止的联系人 - <xliff:g id="USER">%1$s</xliff:g>"</string>
-    <string name="no_blocked_contact">"没有联系人被阻止。"</string>
+    <string name="no_blocked_contact">"无受阻止的联系人。"</string>
     <string name="contact_profile_title">"联系人个人资料"</string>
     <string name="label_status">"状态："</string>
     <string name="label_client_type">"客户端类型："</string>
     <string name="client_type_computer">"计算机"</string>
-    <string name="client_type_mobile">"移动"</string>
+    <string name="client_type_mobile">"移动设备"</string>
     <string name="presence_available">"在线"</string>
     <string name="presence_busy">"忙碌"</string>
     <string name="presence_away">"离开"</string>
     <string name="presence_idle">"空闲"</string>
-    <string name="presence_offline">"脱机"</string>
-    <string name="presence_invisible">"显示为脱机"</string>
+    <string name="presence_offline">"离线"</string>
+    <string name="presence_invisible">"显示为离线"</string>
     <string name="chat_with">"与<xliff:g id="USER">%1$s</xliff:g>聊天"</string>
     <string name="me">"我"</string>
-    <string name="compose_hint">"键入内容"</string>
+    <string name="compose_hint">"输入内容"</string>
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g>在线"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g>离开"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g>正忙"</string>
-    <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g>脱机"</string>
+    <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g>处于离线状态"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g>已加入"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g>已离开"</string>
     <string name="time_stamp" format="date">"'发送时间：'<xliff:g id="DATE">EEEE</xliff:g><xliff:g id="AMPM">a</xliff:g>' '<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g>"</string>
     <string name="send">"发送"</string>
-    <string name="msg_sent_failed">"该消息无法发送。"</string>
-    <string name="disconnected_warning">"与服务器断开连接。消息将在您上线时发送。"</string>
-    <string name="contact_offline_warning">"<xliff:g id="USER_0">%1$s</xliff:g>脱机。您发送的消息会在<xliff:g id="USER_1">%1$s</xliff:g>再次上线后发送给他/她。"</string>
-    <string name="contact_not_in_list_warning">"<xliff:g id="USER">%1$s</xliff:g>不在您的“联系人”列表中。"</string>
+    <string name="msg_sent_failed">"无法发送此消息。"</string>
+    <string name="disconnected_warning">"与服务器失去连接。消息将在下次上线时发送。"</string>
+    <string name="contact_offline_warning">"<xliff:g id="USER_0">%1$s</xliff:g>处于离线状态。您发送的消息将在<xliff:g id="USER_1">%1$s</xliff:g>下次上线时传送出去。"</string>
+    <string name="contact_not_in_list_warning">"<xliff:g id="USER">%1$s</xliff:g>不在您的联系人列表中。"</string>
     <string name="select_link_title">"选择链接"</string>
-    <string name="empty_chat_list">"没有正在进行的聊天。"</string>
+    <string name="empty_chat_list">"无活动聊天。"</string>
     <string name="add_contact_title">"添加联系人"</string>
-    <string name="input_contact_label">"您要邀请的人的电子邮件地址："</string>
+    <string name="input_contact_label">"您希望邀请的用户的电子邮件地址："</string>
     <string name="choose_list_label">"选择一个列表："</string>
-    <string name="invite_instruction">"键入要从“联系人”添加的名称。"</string>
+    <string name="invite_instruction">"输入用户名以从联系人添加。"</string>
     <string name="invite_label">"发送邀请"</string>
     <string name="setting_title">"常规设置"</string>
-    <string name="hide_offline_contacts">"隐藏脱机联系人"</string>
+    <string name="hide_offline_contacts">"隐藏离线联系人"</string>
     <string name="notification_group_title">"通知设置"</string>
     <string name="notification_enabled_title">"即时消息通知"</string>
-    <string name="notification_enabled_summary">"收到即时消息在状态栏中通知"</string>
+    <string name="notification_enabled_summary">"收到即时消息时在状态栏中显示通知"</string>
     <string name="notification_vibrate_title">"振动"</string>
-    <string name="notification_vibrate_summary">"收到即时消息时伴有振动"</string>
+    <string name="notification_vibrate_summary">"在收到即时消息的同时振动"</string>
     <string name="notification_sound_title">"声音"</string>
-    <string name="notification_sound_summary">"收到即时消息时伴有响铃"</string>
+    <string name="notification_sound_summary">"在收到即时消息的同时播放铃声"</string>
     <string name="notification_ringtone_title">"选择铃声"</string>
     <string name="invitation_prompt">"<xliff:g id="USER">%1$s</xliff:g>邀请您加入群聊。"</string>
-    <string name="invitation_sent_prompt">"邀请已发送至<xliff:g id="USER">%1$s</xliff:g>。"</string>
+    <string name="invitation_sent_prompt">"已向<xliff:g id="USER">%1$s</xliff:g>发送邀请。"</string>
     <string name="accept_invitation">"接受"</string>
     <string name="decline_invitation">"拒绝"</string>
-    <string name="subscription_prompt">"<xliff:g id="USER">%1$s</xliff:g>邀请您加入他们的“联系人”列表。"</string>
+    <string name="subscription_prompt">"<xliff:g id="USER">%1$s</xliff:g>已邀请您加入其联系人列表。"</string>
     <string name="approve_subscription">"接受"</string>
     <string name="decline_subscription">"拒绝"</string>
-    <string name="approve_subscription_error">"无法批准<xliff:g id="USER">%1$s</xliff:g>的订阅。请稍后重试。"</string>
-    <string name="decline_subscription_error">"无法拒绝来自<xliff:g id="USER">%1$s</xliff:g>的订阅。请稍后重试。"</string>
-    <string name="newMessages_label">"新的<xliff:g id="PROVIDER">%1$s</xliff:g>消息"</string>
-    <string name="num_unread_chats">"<xliff:g id="NUMBER">%1$d</xliff:g> 条未读的聊天消息"</string>
+    <string name="approve_subscription_error">"无法批准来自<xliff:g id="USER">%1$s</xliff:g>的好友申请。请稍后再试。"</string>
+    <string name="decline_subscription_error">"无法拒绝来自<xliff:g id="USER">%1$s</xliff:g>的好友申请。请稍后再试。"</string>
+    <string name="newMessages_label">"来自<xliff:g id="PROVIDER">%1$s</xliff:g>的新消息"</string>
+    <string name="num_unread_chats">"<xliff:g id="NUMBER">%1$d</xliff:g> 条未读聊天消息"</string>
     <string name="subscription_notify_text">"来自<xliff:g id="USER">%s</xliff:g>的新好友邀请"</string>
     <string name="notify_groupchat_label">"群聊邀请"</string>
     <string name="group_chat_invite_notify_text">"来自<xliff:g id="USER">%s</xliff:g>的新群聊邀请"</string>
     <string name="add_contact_success">"已添加联系人“<xliff:g id="USER">%1$s</xliff:g>”。"</string>
     <string name="delete_contact_success">"联系人“<xliff:g id="USER">%1$s</xliff:g>”已删除。"</string>
-    <string name="block_contact_success">"联系人“<xliff:g id="USER">%1$s</xliff:g>”已被阻止。"</string>
-    <string name="unblock_contact_success">"已取消阻止联系人“<xliff:g id="USER">%1$s</xliff:g>”。"</string>
-    <string name="perm_label">"启用即时消息服务"</string>
-    <string name="perm_desc">"允许应用程序通过互联网启用即时消息服务。"</string>
+    <string name="block_contact_success">"已阻止联系人“<xliff:g id="USER">%1$s</xliff:g>”。"</string>
+    <string name="unblock_contact_success">"联系人“<xliff:g id="USER">%1$s</xliff:g>”已解除阻止。"</string>
+    <string name="perm_label">"启动即时消息服务"</string>
+    <string name="perm_desc">"允许应用程序通过 intent 启动即时消息服务。"</string>
     <string name="error">"注意"</string>
-    <string name="login_service_failed">"无法登录<xliff:g id="SERVICE">%1$s</xliff:g>服务。请稍后重试。"\n"（详细信息：<xliff:g id="DESCRIPTION">%2$s</xliff:g>）"</string>
+    <string name="login_service_failed">"无法登录<xliff:g id="SERVICE">%1$s</xliff:g>服务。请稍后再试。"\n"（详细信息：<xliff:g id="DESCRIPTION">%2$s</xliff:g>）"</string>
     <string name="add_list_failed">"未添加该列表。"</string>
-    <string name="block_contact_failed">"联系人未被阻止。"</string>
-    <string name="unblock_contact_failed">"联系人未被取消阻止。"</string>
+    <string name="block_contact_failed">"未阻止联系人。"</string>
+    <string name="unblock_contact_failed">"联系人未解除阻止。"</string>
     <string name="select_contact">"请先选择一个联系人。"</string>
-    <string name="disconnected">"连接断开！"\n</string>
+    <string name="disconnected">"已断开连接！"\n</string>
     <string name="service_error">"服务错误！"</string>
-    <string name="load_contact_list_failed">"“联系人”列表未载入。"</string>
+    <string name="load_contact_list_failed">"未载入联系人列表。"</string>
     <string name="cant_connect_to_server">"无法连接到服务器。请检查您的连接。"</string>
-    <string name="contact_already_exist">"<xliff:g id="USER">%1$s</xliff:g>已在您的“联系人”列表中。"</string>
-    <string name="contact_blocked">"联系人“<xliff:g id="USER">%1$s</xliff:g>”已被阻止。"</string>
-    <string name="contact_not_loaded">"正在载入您的“联系人”列表，请耐心等待。"</string>
+    <string name="contact_already_exist">"<xliff:g id="USER">%1$s</xliff:g>已在您的联系人列表中。"</string>
+    <string name="contact_blocked">"已阻止联系人“<xliff:g id="USER">%1$s</xliff:g>”。"</string>
+    <string name="contact_not_loaded">"正在载入联系人列表，请稍候。"</string>
     <string name="network_error">"出现网络错误。"</string>
-    <string name="service_not_support">"服务器不支持该功能。"</string>
+    <string name="service_not_support">"服务器不支持此功能。"</string>
     <string name="invalid_password">"您输入的密码无效。"</string>
-    <string name="internal_server_error">"服务器遇到错误。"</string>
-    <string name="not_implemented">"服务器不支持该功能。"</string>
+    <string name="internal_server_error">"服务器遇到一个错误。"</string>
+    <string name="not_implemented">"服务器不支持此功能。"</string>
     <string name="service_unavaiable">"服务器当前不可用。"</string>
-    <string name="timeout">"服务器超时。"</string>
+    <string name="timeout">"服务器已超时。"</string>
     <string name="version_not_supported">"服务器不支持当前版本。"</string>
     <string name="message_queue_full">"消息队列已满。"</string>
-    <string name="domain_not_supported">"服务器不支持转向到该域。"</string>
+    <string name="domain_not_supported">"服务器不支持转发至该域。"</string>
     <string name="unknown_user">"您输入的用户名无法识别。"</string>
     <string name="recipient_blocked_the_user">"抱歉，您已被该用户阻止。"</string>
-    <string name="session_expired">"会话已过期，请重新登录。"</string>
-    <string name="forced_logout">"您已从其他客户端登录。"</string>
-    <string name="already_logged_in">"您已从其他客户端登录。"</string>
-    <string name="msisdn_error">"抱歉，无法从您的 SIM 卡读取该电话号码。请联系您的接线员寻求帮助。"</string>
+    <string name="session_expired">"此会话已过期，请重新登录。"</string>
+    <string name="forced_logout">"您已从另一个客户端登录。"</string>
+    <string name="already_logged_in">"您已从另一个客户端登录。"</string>
+    <string name="msisdn_error">"抱歉，无法从您的 SIM 卡读取手机号码。请与运营商联系寻求帮助。"</string>
     <string name="not_signed_in">"您当前未登录。"</string>
     <string name="general_error">"错误代码 <xliff:g id="CODE">%1$d</xliff:g>"</string>
   <string-array name="default_smiley_names">
-    <item>"开心"</item>
-    <item>"忧伤"</item>
+    <item>"幸福"</item>
+    <item>"悲伤"</item>
     <item>"眨眼"</item>
-    <item>"吐舌"</item>
-    <item>"吃惊"</item>
+    <item>"吐舌头"</item>
+    <item>"惊讶"</item>
     <item>"亲吻"</item>
-    <item>"叫喊"</item>
+    <item>"大喊"</item>
     <item>"酷"</item>
     <item>"财迷"</item>
-    <item>"不知所云"</item>
+    <item>"说错了话"</item>
     <item>"尴尬"</item>
     <item>"天使"</item>
-    <item>"犹豫不定"</item>
+    <item>"犹豫"</item>
     <item>"哭泣"</item>
-    <item>"闭嘴"</item>
+    <item>"保密"</item>
     <item>"大笑"</item>
     <item>"困惑"</item>
   </string-array>
