--- a/samples/PluginDemo/res/values-zh-rTW/strings.xml
+++ b/samples/PluginDemo/res/values-zh-rTW/strings.xml
@@ -21,14 +21,14 @@
     <string name="menu_contact_list">"聯絡人清單"</string>
     <string name="menu_start_chat">"傳送即時訊息"</string>
     <string name="menu_view_profile">"好友資訊"</string>
-    <string name="menu_end_conversation">"結束對談"</string>
+    <string name="menu_end_conversation">"結束會話"</string>
     <string name="menu_switch_chats">"切換即時通訊"</string>
     <string name="menu_insert_smiley">"插入表情符號"</string>
     <string name="sign_up">"取得新帳戶"</string>
     <string name="check_save_password">"為了安全起見，如果電話遺失或遭竊，請使用電腦前往該網站並變更密碼。"</string>
     <string name="buddy_list_title">"聯絡人清單 - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
     <string name="label_username">"使用者名稱："</string>
-    <string name="ongoing_conversation">"對談 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
+    <string name="ongoing_conversation">"會話 (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="contact_profile_title">"聯絡人資訊"</string>
     <string name="presence_available">"可用"</string>
     <string name="add_contact_title">"新增聯絡人"</string>
